--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <!-- 부트스트랩 시작코드(수정) -->
     <!-- Required meta tags -->
-    <meta charset="utf-8"/>
-    <meta
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-            name="viewport"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link
-            crossorigin="anonymous"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 
     <!-- 구글폰트 -->
     <link
             href="https://fonts.googleapis.com/css?family=Stylish&display=swap"
             rel="stylesheet"
     />
-
-    <!-- JS -->
-    <script
-            crossorigin="anonymous"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    ></script>
-    <script
-            crossorigin="anonymous"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    ></script>
-    <script
-            crossorigin="anonymous"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    ></script>
 
     <!--파일업로드 코드-->
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
@@ -61,11 +48,9 @@
             background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
             background-size: cover;
             background-position: center;
-
         }
 
         .sitetitle {
-
             margin: 10px;
             padding: 120px 0px;
             text-align: center;
@@ -127,108 +112,119 @@
             padding-top: 20px;
         }
 
-<<<<<<< HEAD
-      @media screen and (max-width: 900px) {
-=======
+        <
+        <
+        <
+        <
+        <
+        <
+        <
+        HEAD
+
         @media screen and (max-width: 900px) {
->>>>>>> 636fb04864bda7fb769e1f60ad471e8251369836
-            .sitetop {
-                width: 100%;
-                height: 160px;
-                background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
-                background-size: cover;
-                background-position: center;
+        =======
+            @media screen and (max-width: 900px) {
+                >>> >>> >
+
+            636fb04864bda7fb769e1f60ad471e8251369836
+               .sitetop {
+                   width: 100%;
+                   height: 160px;
+                   background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
+                   background-size: cover;
+                   background-position: center;
+               }
+
+                .sitetitle {
+                    margin: 0px;
+                    padding: 50px 0px;
+                    text-align: center;
+                    font-family: "Arial Black", sans-serif;
+                    font-size: 40px;
+                    font-weight: bold;
+                    color: #ffffff;
+                    text-shadow: 2px 2px 0px #333333;
+                }
+
+                /* Add a black background color to the top navigation */
+                .topnav {
+                    width: 100%;
+                    margin: auto;
+                    background-color: #333;
+                    overflow: hidden;
+                }
+
+                /* Style the links inside the navigation bar */
+                .topnav a {
+                    float: left;
+                    color: #f2f2f2;
+                    text-align: center;
+                    padding: 10px 16px;
+                    text-decoration: none;
+                    font-size: 12px;
+                }
+
+                /* Change the color of links on hover */
+                .topnav a:hover {
+                    background-color: #ddd;
+                    color: black;
+                }
+
+                /* Add a color to the active/current link */
+                .topnav a.active {
+                    background-color: darkgoldenrod;
+                    color: white;
+                }
+
+                .wrap {
+                    width: 100%;
+                }
+
+                /* index.html만의 부분 s */
+                .card-deck {
+                    width: 100%;
+                    padding-bottom: 5px;
+
+                }
+
+                .card {
+                    min-width: 250px;
+                }
+
+            <<<<<<< HEAD
+
+                /* index.html만의 부분 e */
+            =======
+                >>> >>> >
+
+            636fb04864bda7fb769e1f60ad471e8251369836
+                   /* index.html만의 부분 e */
+               .footer {
+                   width: 100%;
+                   bottom: 10px;
+                   height: 3rem; /* 푸터 높이 */
+                   background-color: darkgoldenrod;
+                   text-align: center;
+                   color: white;
+               }
             }
-
-            .sitetitle {
-                margin: 0px;
-                padding: 50px 0px;
-                text-align: center;
-                font-family: "Arial Black", sans-serif;
-                font-size: 40px;
-                font-weight: bold;
-                color: #ffffff;
-                text-shadow: 2px 2px 0px #333333;
-            }
-
-            /* Add a black background color to the top navigation */
-            .topnav {
-                width: 100%;
-                margin: auto;
-                background-color: #333;
-                overflow: hidden;
-            }
-
-            /* Style the links inside the navigation bar */
-            .topnav a {
-                float: left;
-                color: #f2f2f2;
-                text-align: center;
-                padding: 10px 16px;
-                text-decoration: none;
-                font-size: 12px;
-            }
-
-            /* Change the color of links on hover */
-            .topnav a:hover {
-                background-color: #ddd;
-                color: black;
-            }
-
-            /* Add a color to the active/current link */
-            .topnav a.active {
-                background-color: darkgoldenrod;
-                color: white;
-            }
-
-            .wrap {
-                width: 100%;
-            }
-
-            /* index.html만의 부분 s */
-            .card-deck {
-                width: 100%;
-                padding-bottom: 5px;
-
-            }
-
-            .card {
-                min-width: 250px;
-            }
-<<<<<<< HEAD
-            /* index.html만의 부분 e */
-
-=======
->>>>>>> 636fb04864bda7fb769e1f60ad471e8251369836
-
-            /* index.html만의 부분 e */
-            .footer {
-                width: 100%;
-                bottom: 10px;
-                height: 3rem; /* 푸터 높이 */
-                background-color: darkgoldenrod;
-                text-align: center;
-                color: white;
-            }
-        }
 
         /* !!여기는 모바일 버전 css 끝!! */
-
     </style>
 </head>
-<body>
 
-<header class="wrap">
-    <div class="sitetop">
-        <h1 class="sitetitle">우리의 여행</h1>
-    </div>
-    <div class="topnav">
-        <a class="active" href="/">우리의 여행일기</a>
-        <a href="/write">일기 쓰기</a>
-        <a href="/mylog">내 일기 모아보기</a>
-        <a href="#about">about</a>
-    </div>
-</header>
+<body>
+    <header class="wrap">
+        <div class="sitetop">
+            <h1 class="sitetitle">우리의 여행</h1>
+        </div>
+        <div class="topnav">
+            <a class="active" href="/">우리의 여행일기</a>
+            <a href="/write">일기 쓰기</a>
+            <a href="/mylog">내 일기 모아보기</a>
+            <a href="#about">about</a>
+        </div>
+    </header>
 
 <div class="wrap">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -265,103 +261,103 @@
                 <img class="d-block w-100" src="https://placeimg.com/1080/500/nature" alt="Third slide">
             </div>
         </div>
-<<<<<<< HEAD
+        <<<<<<< HEAD
         <div class="topnav">
             <a class="active" href="/">우리의 여행일기</a>
             <a href="/write">일기 쓰기</a>
             <a href="#mypost">내 일기 모아보기</a>
             <a href="#about">about</a>
-          </div>
-    </header>
+        </div>
+        </header>
 
-    <div class="wrap">
-        <div class="card-deck">
-          <div class="card">
-=======
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+        <div class="wrap">
+            <div class="card-deck">
+                <div class="card">
+                    =======
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
 
-    <div class="card-deck">
-        <div class="card">
->>>>>>> 636fb04864bda7fb769e1f60ad471e8251369836
-            <img class="card-img-top"
-                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                <p class="card-text">간단한 일기 내용입니다.</p>
-                <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+                <div class="card-deck">
+                    <div class="card">
+                        >>>>>>> 636fb04864bda7fb769e1f60ad471e8251369836
+                        <img class="card-img-top"
+                             src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                             alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+                            <p class="card-text">간단한 일기 내용입니다.</p>
+                            <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top"
+                             src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                             alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+                            <p class="card-text">간단한 일기 내용입니다.</p>
+                            <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top"
+                             src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                             alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+                            <p class="card-text">간단한 일기 내용입니다.</p>
+                            <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top"
+                             src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                             alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+                            <p class="card-text">간단한 일기 내용입니다.</p>
+                            <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top"
+                             src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                             alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+                            <p class="card-text">간단한 일기 내용입니다.</p>
+                            <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top"
+                             src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                             alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+                            <p class="card-text">간단한 일기 내용입니다.</p>
+                            <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top"
-                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                <p class="card-text">간단한 일기 내용입니다.</p>
-                <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top"
-                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                <p class="card-text">간단한 일기 내용입니다.</p>
-                <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-            </div>
-        </div>
-    </div>
-    <div class="card-deck">
-        <div class="card">
-            <img class="card-img-top"
-                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                <p class="card-text">간단한 일기 내용입니다.</p>
-                <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top"
-                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                <p class="card-text">간단한 일기 내용입니다.</p>
-                <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top"
-                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
-                <p class="card-text">간단한 일기 내용입니다.</p>
-                <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
-            </div>
-        </div>
-    </div>
-</div>
 
-<footer class="wrap">
-    <div class="footer">
-        <p>made by 코우파<br>
-            <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
+            <footer class="wrap">
+                <div class="footer">
+                    <p>made by 코우파<br>
+                        <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
 
-    </div>
+                </div>
 
-</footer>
+            </footer>
 </body>
 </html>
