--- a/templates/write.html
+++ b/templates/write.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-
+    <!-- 부트스트랩 시작코드(수정) -->
     <!-- Required meta tags -->
-    <meta charset="utf-8"/>
-    <meta
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-            name="viewport"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link
-            crossorigin="anonymous"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 
     <!-- 구글폰트 -->
     <link
             href="https://fonts.googleapis.com/css?family=Stylish&display=swap"
             rel="stylesheet"
     />
-
-    <!-- JS -->
-    <script
-            crossorigin="anonymous"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    ></script>
-    <script
-            crossorigin="anonymous"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    ></script>
-    <script
-            crossorigin="anonymous"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    ></script>
 
     <!--파일업로드 코드-->
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
@@ -62,7 +48,6 @@
             background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
             background-size: cover;
             background-position: center;
-
         }
 
         .sitetitle {
@@ -202,9 +187,8 @@
                 margin-bottom: 40px;
 
             }
+
             /* write.html만의 부분 e */
-
-
             .footer {
                 width: 100%;
                 bottom: 10px;
@@ -214,6 +198,7 @@
                 color: white;
             }
         }
+
         /* !!여기는 모바일 버전 css 끝!! */
     </style>
 
@@ -222,94 +207,103 @@
             // 이것은 파일업로드 할때 파일명을 보이게 해주는 코드
             bsCustomFileInput.init()
         })
+
+        function make_log() {
+            $.ajax({
+                type: "POST",
+                url: "/log",
+                data: {test_give: '서버 클라이언트 연결 test'},
+                success: function (response) {
+                    if (response["result"] == "success") {
+                        alert(response['msg']);
+                        window.location.reload();
+                    }
+                }
+            })
+        }
     </script>
 
 </head>
 
 <body>
-<header class="wrap">
-    <div class="sitetop">
-        <h1 class="sitetitle">우리의 여행</h1>
-    </div>
-    <div class="topnav">
-        <a href="/">우리의 여행일기</a>
-        <a class="active" href="/write">일기 쓰기</a>
-        <a href="/mylog">내 일기 모아보기</a>
-        <a href="#about">about</a>
-    </div>
-</header>
+    <header class="wrap">
+        <div class="sitetop">
+            <h1 class="sitetitle">우리의 여행</h1>
+        </div>
+        <div class="topnav">
+            <a href="/">우리의 여행일기</a>
+            <a class="active" href="/write">일기 쓰기</a>
+            <a href="/mylog">내 일기 모아보기</a>
+            <a href="#about">about</a>
+        </div>
+    </header>
 
-<div class="wrap">
+    <div class="wrap">
 
-    <!--본문 부분: 기록 작성-->
-    <div class="form-post" id="post-box">
-        <div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <input class="form-control" id="post-writer" placeholder="ID">
+        <!--본문 부분: 기록 작성-->
+        <div class="form-post" id="post-box">
+            <div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <input class="form-control" id="post-writer" placeholder="ID">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <input class="form-control" id="post-writer" placeholder="비밀번호">
+                    </div>
                 </div>
-                <div class="form-group col-md-6">
-                    <input class="form-control" id="post-writer" placeholder="비밀번호">
+
+                <div class="form-group">
+                    <input class="form-control" id="post-place" placeholder="여행지">
                 </div>
 
+                <div class="form-group">
+                    <input class="form-control" id="post-title" placeholder="일기 제목">
+                </div>
+
+                <!--날짜-->
+                <div class="form-group">
+                    <input type="date" class="form-control" id="post-date" name="trip-start"
+                           placeholder="날짜 선택">
+                </div>
+
+                <!--날씨-->
+                <!--날씨 중에 쓸 이모티콘을 선택해야 함-->
+                <!--<form action='a.jsp'>-->
+                <!--날씨<br>-->
+                <!--<input type='radio' name='weather' value='sunny'/>☀-->
+                <div class="form-group" id="post-weather">
+                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☀</label>
+                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☁</label>
+                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☂</label>
+                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">💨️</label>
+                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⚡</label>
+                    <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⛄</label>
+                </div>
+
+                <!--사진첨부-->
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="file">
+                    <label class="custom-file-label" for="file">사진 선택</label>
+                </div>
+
+                <!--내용작성-->
+                <div class="form-group-comment">
+                    <label for="post-comment">일기 내용</label>
+                    <textarea class="form-control" id="post-comment" rows="2"></textarea>
+                </div>
+
+                <button class="btn btn-primary" onclick="make_log()" type="button">일기 저장</button>
             </div>
-
-            <div class="form-group">
-                <input class="form-control" id="post-place" placeholder="여행지">
-            </div>
-            <div class="form-group">
-                <input class="form-control" id="post-title" placeholder="일기 제목">
-            </div>
-
-            <!--날짜-->
-            <div class="form-group">
-                <input type="date" class="form-control" id="post-date" name="trip-start"
-                       placeholder="날짜 선택">
-            </div>
-
-<!--            날씨 중에 쓸 이모티콘을 선택해야 함-->
-<!--            <form action='a.jsp'>-->
-<!--                날씨<br>-->
-<!--                <input type='radio' name='weather' value='sunny'/>️☀️-->
-
-            <div class="form-group" id="post-weather">
-                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☀️</label>
-                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☁️</label>
-                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☂️️</label>
-                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">💨️</label>
-                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⚡️️</label>
-                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⛄️️</label>
-
-            </div>
-
-
-            <!--사진첨부-->
-            <div class="custom-file">
-                <input type="file" class="custom-file-input" id="file">
-                <label class="custom-file-label" for="file">사진 선택</label>
-            </div>
-
-            <!--내용작성-->
-            <div class="form-group-comment">
-                <label for="post-comment">일기 내용</label>
-                <textarea class="form-control" id="post-comment" rows="2"></textarea>
-            </div>
-
-            <button class="btn btn-primary" onclick="postArticle()" type="button">일기 저장</button>
+        </div>
+        <div class="card-columns" id="cards-box">
         </div>
     </div>
-    <div class="card-columns" id="cards-box">
-    </div>
-</div>
 
-</div>
-
-<footer class="wrap">
-    <div class="footer">
-        <p>made by 코우파<br>
-            <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
-
-    </div>
-</footer>
+    <footer class="wrap">
+        <div class="footer">
+            <p>made by 코우파<br>
+                <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
+        </div>
+    </footer>
 </body>
 </html>
