오류 수정, 일기쓰기 기능 추가

--- a/templates/mylog.html
+++ b/templates/mylog.html
@@ -48,6 +48,7 @@
             background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
             background-size: cover;
             background-position: center;
+            text-decoration: none;
         }
 
         .sitetitle {
@@ -59,6 +60,7 @@
 
             color: #ffffff;
             text-shadow: 2px 2px 0px #333333;
+            text-decoration: none;
         }
 
         /* Add a black background color to the top navigation */
@@ -115,7 +117,7 @@
             .sitetop {
                 width: 100%;
                 height: 160px;
-                background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
+                background-image: url("../static/introduction.jpeg");
                 background-size: cover;
                 background-position: center;
             }
@@ -194,7 +196,7 @@
 <body>
     <header class="wrap">
         <div class="sitetop">
-            <h1 class="sitetitle">우리의 여행</h1>
+            <a href="/"><h1 class="sitetitle">우리의 여행</h1></a>
         </div>
         <div class="topnav">
             <a href="/">우리의 여행일기</a>
