--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,7 @@
             background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
             background-size: cover;
             background-position: center;
+            text-decoration: none;
         }
 
         .sitetitle {
@@ -59,6 +60,7 @@
 
             color: #ffffff;
             text-shadow: 2px 2px 0px #333333;
+            text-decoration: none;
         }
 
         /* Add a black background color to the top navigation */
@@ -111,25 +113,12 @@
             padding-top: 20px;
         }
 
-        <
-        <
-        <
-        <
-        <
-        <
-        <
-        HEAD
-
-        @media screen and (max-width: 900px) {
-        =======
             @media screen and (max-width: 900px) {
-                >>> >>> >
 
-            636fb04864bda7fb769e1f60ad471e8251369836
                .sitetop {
                    width: 100%;
                    height: 160px;
-                   background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
+                   background-image: url("../static/introduction.jpeg");
                    background-size: cover;
                    background-position: center;
                }
@@ -143,6 +132,7 @@
                     font-weight: bold;
                     color: #ffffff;
                     text-shadow: 2px 2px 0px #333333;
+                    text-decoration: none;
                 }
 
                 /* Add a black background color to the top navigation */
@@ -190,13 +180,6 @@
                     min-width: 250px;
                 }
 
-            <<<<<<< HEAD
-
-                /* index.html만의 부분 e */
-            =======
-                >>> >>> >
-
-            636fb04864bda7fb769e1f60ad471e8251369836
                    /* index.html만의 부분 e */
                .footer {
                    width: 100%;
@@ -215,7 +198,7 @@
 <body>
     <header class="wrap">
         <div class="sitetop">
-            <h1 class="sitetitle">우리의 여행</h1>
+            <a href="/"><h1 class="sitetitle">우리의 여행</h1></a>
         </div>
         <div class="topnav">
             <a class="active" href="/">우리의 여행일기</a>
